--- a/style.css
+++ b/style.css
@@ -38,3 +38,38 @@ form button:hover{
     color:white;
     background-color: #fda085;
 } 
+
+.todo-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-list{
+    list-style: none;
+    min-width: 30%;
+}
+
+.todo {
+    margin: 0.5rem;
+    background-color: white;
+    color: black;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.todo li{
+    flex:1;
+}
+.trash-btn, .complete-btn{
+    background-color: #ff6f47;
+    color: white;
+    padding: 1rem;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+}
+.complete-btn{
+    background-color: rgb(73,204,73);
+}
