--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ form button:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s ease;
 }
 .todo li{
     flex:1;
@@ -72,4 +73,15 @@ form button:hover{
 }
 .complete-btn{
     background-color: rgb(73,204,73);
+}
+.todo-item{
+    padding: 0rem 0.5rem;
+}
+.fa-check, .fa-trash{
+    pointer-events: none;
+}
+
+.completed{
+    text-decoration: line-through;
+    opacity: 0.5;
 }
