--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ form {
 
 form input, 
 form button{
-    padding: 0.5rem;
-    font-size: 2rem;
+    padding: 1rem;
+    font-size: 1.5rem;
     background-color: white;
     border: none;
 }
@@ -80,8 +80,39 @@ form button:hover{
 .fa-check, .fa-trash{
     pointer-events: none;
 }
-
 .completed{
     text-decoration: line-through;
     opacity: 0.5;
+}
+.fall{
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
+select{
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    border:none;
+    outline: none;
+    color: #ff6f47;
+    width: 10rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    padding: 1rem;
+    font-family: "Poppins", sans-serif;
+}
+.select{
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+.select::after{
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom:0;
+    padding: 1rem;
+    background-color: #ff6f47;
+    pointer-events: none;
 }
